# aiodynamodb

./: .gitignore  Makefile  README.md  pyproject.toml  zensical.toml
.github/workflows/: check-branch.yml  docs.yml  integration.yml  release.yml  test.yml
docs/: index.md
docs/api-reference/: client.md  models.md  projection.md  types.md  updates.md
docs/getting-started/: index.md  quickstart.md
docs/guides/: batch.md  crud.md  custom-types.md  defining-models.md  exceptions.md  fastapi.md  indexes.md  projections.md  query.md  scan.md  table-lifecycle.md  testing.md  transactions.md  update.md
src/aiodynamodb/: __init__.py  _seriaizers.py  _serializers.py  _state.py  _util.py  client.py  conditions.py  custom_types.py  exceptions.py  models.py  projection.py  testing.py  updates.py
tests/: __init__.py  conftest.py  entities.py  test_basic_ops.py  test_batch_ops.py  test_projection.py  test_put_get_ops.py  test_query_ops.py  test_scan_ops.py  test_serializers.py  test_storage_format_ops.py  test_table_ops.py  test_transact_ops.py  test_update_ops.py
tests/integration/: conftest.py  test_batch.py  test_conditions.py  test_crud.py  test_custom_types.py  test_indexes.py  test_pagination.py  test_projections.py  test_query_scan.py  test_transactions.py  test_update.py
tests/unit/: __init__.py  conftest.py  entities.py  test_batch_ops.py  test_projection.py  test_put_get_ops.py  test_query_ops.py  test_scan_ops.py  test_serializers.py  test_storage_format_ops.py  test_table_ops.py  test_transact_ops.py  test_update_ops.py
