[project]
authors = [
  {name = "Nikhil Kumar", email = "nikumar1206@gmail.com"},
]

dependencies = [
  "aioboto3>=13.0.0",
  "aiobotocore>=2.13.0",
  "pydantic>=2.7.0",
]

description = "Async DynamoDB ORM with Pydantic"
name = "aiodynamodb"
readme = "README.md"
requires-python = ">=3.12"
version = "0.0.0"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.14.14",
  "types-aiobotocore-dynamodb>=3.1.1",
]

testing = [
  "aiomoto>=0.3.0",
  "moto[dynamodb]>=5.1.0",
]

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.28,<0.10.0"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
ignore = [
  "E501",
  "D107",
  "D100",
  "D101",
  "D104",
  "ANN401",
]
select = ["ALL"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
testpaths = ["tests"]
