[project]
authors = [
  {name = "Nikhil Kumar", email = "nikumar1206@gmail.com"},
  {name = "Alberto Calderari", email = "actwitter19@gmail.com"},
]

dependencies = [
  "aioboto3>=13.0.0",
  "aiobotocore>=2.13.0",
  "pydantic>=2.7.0",
  "types-aioboto3[dynamodb]>=15.5.0",
]

description = "Async DynamoDB ORM with Pydantic"
name = "aiodynamodb"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.2"

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.10.6",
  "mypy>=1.19",
  "pytest-cov",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.14.14",
]

testing = [
  "aiomoto>=0.3.0",
  "moto[dynamodb]>=5.1.0",
]

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.28,<0.10.0"]

[tool.ruff]
line-length = 120
preview = true
target-version = "py312"

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
command_line = "-m pytest"
source = ["src/aiodynamodb"]

[tool.coverage.report]
show_missing = true
skip_covered = true
